# KNXDemo

./: .gitignore  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hikvision/knxdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniImp.cpp
app/src/main/cpp/com/: ComDrive.cpp  ComDrive.h  ComFunc.cpp  ComFunc.h  ComPack.cpp  ComPack.h  Define.h
app/src/main/cpp/knx/: KNXWrapper.cpp  KNXWrapper.h  KnxFunc.cpp  KnxFunc.h
app/src/main/cpp/knx/address/: AddressType.h  GroupAddress.cpp
app/src/main/cpp/knx/include/: descreq.h  descres.h  hostinfo.h  ldata.h  proto.h
app/src/main/cpp/knx/proto/: connreq.c  connres.c  connstatereq.c  connstateres.c  dcreq.c  dcres.c  descreq.c  descres.c  hostinfo.c  ldata.c  proto.c  tpdu.c  tunnelreq.c  tunnelres.c
app/src/main/cpp/knxcore/: KNXClient.cpp  KNXClient.h  KnxFunc.cpp  KnxFunc.h
app/src/main/cpp/knxcore/address/: AddressType.cpp  AddressType.h  GroupAddress.cpp  GroupAddress.h  KnxAddress.h
app/src/main/cpp/knxcore/communication/: DefaultKnxClient.cpp  DefaultKnxClient.h
app/src/main/cpp/knxcore/config/: ConfigBuilder.cpp  ConfigBuilder.h
app/src/main/cpp/socket/: SockUtil.cpp  SockUtil.h  Socket.cpp  Socket.h
app/src/main/cpp/test/: UnitTest.cpp  UnitTest.h
app/src/main/cpp/utils/: ErrCode.h  LogUtil.h  ToolUnits.cpp  ToolUnits.h
app/src/main/cpp/zltoolkit/Network/: Buffer.cpp
app/src/main/java/com/hikvision/jni/: IKNX.java
app/src/main/java/com/hikvision/knxdemo/: MainActivity.java
app/src/main/java/com/hikvision/permission/: CheckPermissionActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hikvision/knxdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
